fix footer move on mobile

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8,7 +8,7 @@
     float: right;
     text-align: center;
     color: white;
-    font-size: 0.8em;
+    font-size: 0.6em;
   }
   a {
     color: white;
